@@ -28,6 +28,12 @@ cvar_t	d_subdiv16 = {"d_subdiv16", "1"};
 cvar_t	d_mipcap = {"d_mipcap", "0"};
 cvar_t	d_mipscale = {"d_mipscale", "1"};
 
+/* FS: Particle size control */
+cvar_t	sw_particle_size_override = {"sw_particle_size_override", "0", true, false, "Enable this to override particle size scaling with sw_particle_size, sw_particle_size_min, and sw_particle_size_max."};
+cvar_t	sw_particle_size_min = {"sw_particle_size_min", "1", true, false, "Minimum particle size.  Standard formula is resolution width divided by 320.  Use sw_particle_size_override to enable."};
+cvar_t	sw_particle_size_max = {"sw_particle_size_max", "8.5", true, false, "Maximum particle size.  Standard formula is resolution width divided by 80 plus 0.5.  Use sw_particle_size_override to enable."};
+cvar_t	sw_particle_size = {"sw_particle_size", "8", true, false, "How many bits to shift for particle sizes.  Higher numbers are smaller particles.  Use sw_particle_size_override to enable."};
+
 surfcache_t		*d_initial_rover;
 qboolean		d_roverwrapped;
 int				d_minmip;
@@ -53,6 +59,12 @@ void D_Init (void)
 	Cvar_RegisterVariable (&d_subdiv16);
 	Cvar_RegisterVariable (&d_mipcap);
 	Cvar_RegisterVariable (&d_mipscale);
+
+	/* FS: Particle size control */
+	Cvar_RegisterVariable (&sw_particle_size_override);
+	Cvar_RegisterVariable (&sw_particle_size_min);
+	Cvar_RegisterVariable (&sw_particle_size_max);
+	Cvar_RegisterVariable (&sw_particle_size);
 
 	r_drawpolys = false;
 	r_worldpolysbacktofront = false;
@@ -88,7 +100,6 @@ D_EnableBackBufferAccess
 */
 void D_EnableBackBufferAccess (void)
 {
-
 	VID_LockBuffer ();
 }
 
@@ -133,6 +144,12 @@ void D_SetupFrame (void)
 		screenwidth = WARP_WIDTH;
 	else
 		screenwidth = vid.rowbytes;
+
+	/* FS: If we change the particle size stuff, updated it immediately */
+	if(sw_particle_size_override.modified || sw_particle_size.modified || sw_particle_size_min.modified || sw_particle_size_max.modified)
+	{
+		D_SetParticleSize();
+	}
 
 	d_roverwrapped = false;
 	d_initial_rover = sc_rover;
