@@ -6,8 +6,10 @@ Additional code from sezero, taniwha, spoike, LordHavoc,
    QuakeForge, Fitzquake, Quakespasm, Darkplaces and more.
 ---------------------------------------------------------
 
+* Scaleable particle sizes for SVGA resolutions.  Use sw_particle_size_override
+  and friends to set more custom values.
 * Fixed GameSpy /slist2 command to be a lot faster.
-* OGG and WAV music support in format of /id1/music/trackXX.ogg
+* OGG and WAV music support in format of /id1/music/trackXX
 * DEVELOPER values are now set with flags.  Setting to Developer 1 will still
   show all types of developer printfs, EXCEPT extreme verbose stuff (which was
   normally commented out in the code).  These flags are set just like dmflags
