@@ -6,7 +6,9 @@ Additional code from sezero, taniwha, spoike, LordHavoc,
    QuakeForge, FitzQuake, Quakespasm, Darkplaces and more.
 ---------------------------------------------------------
 
-* OGG and WAV music support in format of /id1/music/trackXX.ogg
+* Scaleable particle sizes for SVGA resolutions.  Use sw_particle_size_override
+  and friends to set more custom values.
+* OGG and WAV music support in format of /id1/music/trackXX
 * DEVELOPER values are now set with flags.  Setting to Developer 1 will still
   show all types of developer printfs, EXCEPT extreme verbose stuff (which was
   normally commented out in the code).  These flags are set just like dmflags
